<resources>
    <string name="app_name">Gordius Wheel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Mis Strings-->
    <string name="BoxPass">Contraseña</string>
    <string name="BoxUser">Usuario</string>
    <string name="ResetPass">¿Olvido Su Contraseña?</string>
    <string name="CreateAccount">Crear Cuenta</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="TextBox_Name">Nombre</string>
    <string name="LastName1">Apellido Paterno</string>
    <string name="LastName2">Apellido Materno</string>
    <string name="BirthDate">Fecha De Nacimiento</string>
    <string name="Phone">No. Telefono</string>
    <string name="main_Street">Calle Principal</string>
    <string name="secondary_street">Calle Secundaria</string>
    <string name="NumberInt">Numero Int</string>
    <string name="NumberExt">Numero Ext</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_rutas">Map</string>
    <string name="Theme">Tema Oscuro</string>
    <string name="ID">ID</string>
    <string name="Name">Nombre</string>
    <string name="LastName">Apellido</string>
    <string name="Update">Actualizar</string>
    <string name="ShowRoute">Mostrar Ruta</string>
    <string name="AddFav">Añadir A Favoritos</string>
    <string name="ShowSchedule">Mostrar Horarios</string>
    <string name="UserType">Tipo De Usuario</string>

    <!-- Menu-->

    <string name="Driver">Choferes</string>
    <string name="Routes">Rutas</string>
    <string name="Users">Usuarios</string>
</resources>
