<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_menu_camera"
            android:title="Cuenta" />
        <item
            android:id="@+id/nav_rutas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Rutas" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Favoritos" />
        <item
            android:id="@id/nav_user"
            android:title="@string/Users" />
        <item
            android:id="@id/nav_drivers"
            android:title="@string/Driver" />
        <item
            android:id="@id/nav_routes"
            android:title="@string/Routes" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="Ajustes" />
    </group>


</menu>
