<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selecciom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeleccionRutaFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnAddFav"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="184dp"
        android:background="@android:drawable/btn_star_big_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swShowRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:checked="true"
        android:text="@string/ShowRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFav" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/AddFav"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddFav"
        app:layout_constraintEnd_toStartOf="@+id/btnAddFav"
        app:layout_constraintTop_toTopOf="@+id/btnAddFav"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btnShowSched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/ShowSchedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swShowRoute" />

    <TextView
        android:id="@+id/tvNameRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>