<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriversFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/etSearchD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="359dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateDriver">

        <TableLayout
            android:id="@+id/tlTableDrivers"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnDeleteDriver"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_delete"
        app:layout_constraintStart_toEndOf="@+id/btnUpdateDriver"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnUpdateDriver"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_popup_sync"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnSearchDriver"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateDriver"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearchD">

        <RadioButton
            android:id="@+id/rbIDDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:checked="true"
            android:text="@string/ID" />

        <RadioButton
            android:id="@+id/rbNameDrivers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/Name" />

        <RadioButton
            android:id="@+id/rbLastNameDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/LastName" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>